<resources>
    <string name="app_name">Parcel Tracking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Query strings-->
    <string name="login">http://localhost:81/TrackingParcelBackEnd/login.php</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_city">City</string>
    <string name="str_addr_line_1">Address Line 1</string>
    <string name="str_addr_line_2">Address Line 2</string>
    <string name="str_state">State</string>
    <string name="str_credit_limit">Credit Limit</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
</resources>
